--- a/css/centurion-rtl.css
+++ b/css/centurion-rtl.css
@@ -19,24 +19,13 @@ body {
 }
 .container [class*="grid-"] {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
   -ms-box-sizing: border-box;
-  box-sizing: border-box;
   -o-box-sizing: border-box;
   box-sizing: border-box;
   float: right;
   padding: 0 15px;
   position: relative;
-}
-.container .alpha {
-  margin-left: 0;
-  padding-left: 0;
-}
-.container .omega {
-  margin-right: 0;
-  padding-right: 0;
 }
 .container .grid-5 {
   width: 5%;
@@ -236,6 +225,14 @@ body {
 .container .push-66 {
   right: 66.66667%;
 }
+.container .alpha {
+  margin-left: 0;
+  padding-left: 0;
+}
+.container .omega {
+  margin-right: 0;
+  padding-right: 0;
+}
 .container .center-grid {
   display: block;
   float: none;
@@ -248,6 +245,8 @@ body {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    /* Mobile Grid */
+    /* Rows for Mobile */
   }
   .container [class*="grid-"] {
     display: inline;
@@ -286,12 +285,6 @@ body {
   .container .mobile-push-75 {
     right: 75%;
   }
-  .container .center-grid {
-    display: block;
-    float: none;
-    margin-left: auto;
-    margin-right: auto;
-  }
   .container .alpha {
     margin-left: 0;
     padding-left: 0;
@@ -299,6 +292,12 @@ body {
   .container .omega {
     margin-right: 0;
     padding-right: 0;
+  }
+  .container .center-grid {
+    display: block;
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
   }
   .container [class*="pull-"],
   .container [class*="push-"] {
