fixed basic compile issues with new grid Sass rework

--- a/sass/centurion-ie.sass
+++ b/sass/centurion-ie.sass
@@ -15,7 +15,7 @@ $ie7-support: true
 @include grid-generate
 
 /* Centering Grid */
-@include center-grid
+@include grid-center
 
 /* Clearfix */
 @include clearfix
