--- a/sass/centurion-rtl.sass
+++ b/sass/centurion-rtl.sass
@@ -16,7 +16,7 @@ $lang-back: left
 @include grid-generate
 
 /* Centering Grid */
-@include center-grid
+@include grid-center
 
 /* Clearfix */
 @include clearfix
