--- a/sass/fluid.sass
+++ b/sass/fluid.sass
@@ -1,7 +1,6 @@
-@import "core/base"
 /* --------------------------------------------------------
  *
- *  Centurion Framework v 3.1 - FLUID
+ *  Centurion Framework v 3.4 - FLUID
  *  Created by: Justin Hough
  *
  *  Documentation: http://jhough10.github.com/Centurion/get-started.html
@@ -9,10 +8,25 @@
  *
  * -------------------------------------------------------- */
 
-/* Desktop/Tablet Fluid Grid Layout - 92% */
-@include grid-generate(98%)
+@import "core/base"
 
-@include center-grid
+
+
+@include grid(98%)
+  
+@include media-query(phones)
+  @include grid-mobile
+
+@include media-query(tablets)
+  .container
+    width: 98%
+
+@include media-query(desktops)
+  .container
+    width: 100%
+
+
+@include grid-center
 
 /* Clearfix */
 @include clearfix
