--- a/sass/semantic.sass
+++ b/sass/semantic.sass
@@ -1,3 +1,13 @@
+/* --------------------------------------------------------
+ *
+ *  Centurion Framework v 3.4 - Semantic Example
+ *  Created by: Justin Hough (http://justinhough.com/)
+ *
+ *  Documentation: http://jhough10.github.com/Centurion/get-started.html
+ *  Licensed under GPL and MIT.
+ *
+ * -------------------------------------------------------- */
+ 
 @import "core/base"
 
 h1
