--- a/sass/core/_grid.sass
+++ b/sass/core/_grid.sass
@@ -1,17 +1,27 @@
+// Grid Vars
+
+// LTR or RTL Support
 $ie7-support: false
 $lang-front: left
 $lang-back: right
 
-// Center Grid
-// @include center-grid
-@mixin center-grid
-  .center-grid
-    display: block
-    float: none
-    @include auto-center
+// Desktop
+$max-grid-size: 1120px
+$grid-size: 960px
+$max-space: 2%
+$max-rows: 20
 
-// Alpha and Omega
-@mixin first-last
+// Mobile
+$max-resp-width: 100%
+$max-resp-space: $max-space
+
+// Classes
+$grid-class: grid
+$mobile-grid-class: mobile-grid
+
+
+// Alpha, Omega, and Marging
+@mixin alpha-omega
   .alpha
     margin-left: 0
     padding-left: 0
@@ -19,13 +29,77 @@ $lang-back: right
     margin-right: 0
     padding-right: 0
 
-// Center a sized element
-@mixin auto-center
-  margin-left: auto
-  margin-right: auto
+@mixin margin($value)
+  margin-left: $value
+  margin-right: $value
 
-@mixin float-left
+
+// Center Grid - @include center-grid
+@mixin grid-center
+  .center-grid
+    display: block
+    float: none
+    @include margin(auto)
+
+
+// Direction (LTR or RTL)
+@mixin float-direction
   float: $lang-front
+
+
+// Semantic Grid - IE7 Support
+@mixin ie-after-margin-fix ($space)
+  *margin-left: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
+  *margin-right: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
+
+
+@mixin sem-ie-grid($num, $space:2%)
+  $decimal: $num / 100
+  @include ie7-grid-element($decimal)
+  @if $ie7-support
+    *padding-left: 0
+    *padding-right: 0
+    & > *
+      @include ie-after-margin-fix ($space)
+
+@mixin sem-ie-push($num, $space:2%)
+  $decimal: $num / 100
+  @include ie7-push($decimal)
+
+@mixin sem-ie-pull($num)
+  $decimal: $num / 100
+  @include ie7-pull($decimal)
+
+
+// Semantic Grid - IE Fix for Grid Percentage Converter
+@mixin sem-ie-grid-thirds($num, $space:2%)
+  $mul: 1/3
+  $decimal: $num * $mul
+  @include ie7-grid-element($decimal)
+  @if $ie7-support
+    *padding-left: 0
+    *padding-right: 0
+    & > *
+      @include ie-after-margin-fix ($space)
+
+@mixin sem-ie-push-thirds($num)
+  $mul: 1/3
+  $decimal: $num * $mul
+  @include ie7-push($decimal)
+
+@mixin sem-ie-pull-thirds($num)
+  $mul: 1/3
+  $decimal: $num * $mul
+  @include ie7-pull($decimal)
+
+
+// IE 7 Support
+@mixin ie-7-support($space)
+  @if $ie7-support
+    *padding-left: 0
+    *padding-right: 0
+    & > *
+      @include ie-after-margin-fix ($space)
 
 
 // IE Specific Hacks - Border Box Fix
@@ -53,24 +127,9 @@ $lang-back: right
     @include ie-percentage-pull-fix($lang-front, $decimal)
 
 
-@mixin grid($content-width: 960px, $width:98%, $space:2%, $rows:20, $direction:$lang-front)
-  .container
-    width: $content-width
-    @include auto-center
-    [class*="grid-"]
-      +box-sizing(border-box)
-      float: $direction
-      padding: 0 15px
-      @if $ie7-support
-        *padding-left: 0
-        *padding-right: 0
-        & > *
-          @include ie-after-margin-fix ($space)
-      position: relative
-      
-  
-    @include first-last
-  
+// Grid Rows
+@mixin grid-rows($value, $direction, $rows: $max-rows)
+  @if $value == normal
     // Rows by 5
     @for $i from 1 through $rows
       $num: $i * 5
@@ -84,8 +143,9 @@ $lang-back: right
       .push-#{$num}
         #{$direction}: (1% * $num)
         @include ie7-push($decimal)
-  
-    // Rows by 25
+
+  @else if $value == thirds
+    // Rows by 1/3
     @for $i from 1 through 2
       $num: $i * 33
       $mul: 1/3
@@ -102,26 +162,8 @@ $lang-back: right
         #{$direction}: (1% * $percent)
         @include ie7-push($decimal)
 
-    @include center-grid
-
-
-// Mobile Grid Generator - NO PUSH OR PULL
-// @include grid-generator(480px, 20px, 12)
-@mixin grid-mobile ($width: 100%, $space: 2%, $direction: $lang-front)
-  $grid-width: 100%
-  .container
-    width: $width
-    @include auto-center
-    [class*="grid-"]
-      display: inline
-      float: $direction
-      width: $grid-width
-      [class*="grid-"],
-      [class*="mobile-grid-"]
-        padding: 0
-        margin: 0
-    
-    // Mobile Grid
+  @else if $value == mobile
+    /* Rows for Mobile */
     @for $i from 1 through 3
       $num: $i * 25
       .mobile-grid-#{$num}
@@ -130,15 +172,52 @@ $lang-back: right
         #{$direction}: -(1% * $num)
       .mobile-push-#{$num}
         #{$direction}: (1% * $num)
+
+
+// Desktop / Tablet Grid Generator - @include grid
+@mixin grid($content-width: $grid-size, $space:$max-space, $rows:$max-rows, $direction:$lang-front)
+  .container
+    width: $content-width
+    @include margin(auto)
+    [class*="grid-"]
+      +box-sizing(border-box)
+      @include float-direction
+      padding: 0 15px
+      @include ie-7-support($space)
+      position: relative
     
-    @include center-grid
-    @include first-last
+    @include grid-rows(normal, $direction)
+    @include grid-rows(thirds, $direction)
+    @include alpha-omega
+    @include grid-center
+    
+
+// Mobile Grid Generator - NO PUSH OR PULL - @include grid-mobile
+@mixin grid-mobile ($content-width: $max-resp-width, $space: $max-resp-space, $direction:$lang-front)
+  $grid-width: 100%
+  .container
+    width: $content-width
+    @include margin(auto)
+    [class*="grid-"]
+      display: inline
+      @include float-direction
+      width: $grid-width
+      [class*="grid-"], 
+      [class*="mobile-grid-"]
+        padding: 0
+        margin: 0
+    
+    /* Mobile Grid */
+    @include grid-rows(mobile, $direction)
+    @include alpha-omega
+    @include grid-center
+    
     [class*="pull-"],
     [class*="push-"]
       #{$direction}: 0
+  
   @include hide-mobile
-
-
+  
 
 // Semantic Grid
 @mixin sem-container($total-width)
@@ -147,7 +226,7 @@ $lang-back: right
 
 @mixin sem-grid($col-width, $padding: 15px)
   +box-sizing(border-box)
-  @include float-left
+  @include float-direction
   padding: 0 $padding
   position: relative
   width: 1% * $col-width
@@ -157,60 +236,13 @@ $lang-back: right
 
 @mixin sem-pull($offset-pull, $direction: $lang-front)
   #{$direction}: -(1% * $offset-pull)
-
-
-
-// IE7 Support for Semantic Grids
-@mixin ie-after-margin-fix ($space)
-  *margin-left: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
-  *margin-right: expression((!this.className.match(/grid-[1-9]/) && this.currentStyle.display === "block" && this.currentStyle.width === "auto") && "#{$space}")
-
-
-@mixin sem-ie-grid($num, $space:2%)
-  $decimal: $num / 100
-  @include ie7-grid-element($decimal)
-  @if $ie7-support
-    *padding-left: 0
-    *padding-right: 0
-    & > *
-      @include ie-after-margin-fix ($space)
-
-@mixin sem-ie-push($num, $space:2%)
-  $decimal: $num / 100
-  @include ie7-push($decimal)
-
-@mixin sem-ie-pull($num)
-  $decimal: $num / 100
-  @include ie7-pull($decimal)
-
-
-@mixin sem-ie-grid-thirds($num, $space:2%)
-  $mul: 1/3
-  $decimal: $num * $mul
-  @include ie7-grid-element($decimal)
-  @if $ie7-support
-    *padding-left: 0
-    *padding-right: 0
-    & > *
-      @include ie-after-margin-fix ($space)
-
-@mixin sem-ie-push-thirds($num)
-  $mul: 1/3
-  $decimal: $num * $mul
-  @include ie7-push($decimal)
-
-@mixin sem-ie-pull-thirds($num)
-  $mul: 1/3
-  $decimal: $num * $mul
-  @include ie7-pull($decimal)
-
-
-
-// Grid Mixin Combined
-
-@mixin grid-generate($content-width: 960px, $width:98%, $space:2%, $rows:20)
   
-  @include grid($content-width, $width, $space, $rows)
+  
+  
+// Final Combined Grid Mixin
+@mixin grid-generate($width:$grid-size)
+  
+  @include grid($width)
   
   @include media-query(phones)
     @include grid-mobile
@@ -221,4 +253,5 @@ $lang-back: right
   
   @include media-query(desktops)
     .container
-      width: 1120px 
+      width: $max-grid-size
+
