max breakpoint fix

--- a/sass/core/_mixins.sass
+++ b/sass/core/_mixins.sass
@@ -60,7 +60,7 @@ $prefixes: $default-prefixes
       @content
 
   @else if $media == desktops
-    @media only screen and (min-width: $breakpoint-medium+ 1) and (max-width: $breakpoint-large)
+    @media only screen and (min-width: $breakpoint-large)
       @content
 
 
