stripping down Centurion features for overhaul

--- a/sass/centurion-rtl.sass
+++ b/sass/centurion-rtl.sass
@@ -24,46 +24,49 @@ $lang-back: left
 /*  Features */
 
 /* Show Elements */
-@include show-desktop
-@include show-mobile
+//@include show-desktop
+//@include show-mobile
 
 /* Alerts */
-@include alerts
+//@include alerts
 
 /* Breadrumbs */
-@include breadcrumbs
+//@include breadcrumbs
 
 /* Buttons */
-@include buttons
+//@include buttons
 
 /* Images */
-@include images
+//@include images
 
 /* Navigation */
-@include navigation-slim
+//@include navigation-slim
 
 /* Panels */
-@include panels
+//@include panels
 
 /* Pagination */
-@include pagination
+//@include pagination
 
 /* Tabs */
-@include tabs-base
-@include tabs-bottom
+//@include tabs-base
+//@include tabs-bottom
 
 /* Tables */
-@include tables
+//@include tables
 
 /* Tooltips */
-@include tooltips
+//@include tooltips
 
 /*  Typography  */
-@include typography
+//@include typography
 
-@include extendables
+//@include extendables
 
 /* Print */
-@include print
+//@include print
 
-@include mobile-view
+//@include mobile-view
+
+
+@import elusive-webfont
