--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -1,17 +1,17 @@
 @import "vars"
 @import "mixins"
 
-@import "alerts"
-@import "breadcrumbs"
-@import "buttons"
+//@import "alerts"
+//@import "breadcrumbs"
+//@import "buttons"
 @import "grid"
-@import "images"
-@import "navigation"
-@import "pagination"
-@import "panels"
-@import "print"
-@import "tables"
-@import "tabs"
-@import "tooltips"
-@import "typography"
+//@import "images"
+//@import "navigation"
+//@import "pagination"
+//@import "panels"
+//@import "print"
+//@import "tables"
+//@import "tabs"
+//@import "tooltips"
+//@import "typography"
 
