updates to example css files

--- a/sass/fluid.sass
+++ b/sass/fluid.sass
@@ -10,9 +10,8 @@
 
 @import "core/base"
 
-
-
-@include grid(98%)
+/* Fluid Grid */
+@include grid(left, 98%)
   
 @include media-query(phones)
   @include grid-mobile
