changing link colors to be controlled by config

--- a/sass/core/_colors.sass
+++ b/sass/core/_colors.sass
@@ -20,8 +20,8 @@ $green: #a4b357
 
 
 // Links - RGBA
-$link-color: rgba(#ffa84c, 1.0)
-$link-hover-color: rgba(#000000, 1.0)
+$link-color: rgba($default-link-color, 1.0)
+$link-hover-color: rgba($default-link-hover-color, 1.0)
 
 // Border - RGBA
 $border-color: rgba(#CCCCCC, 1.0)
