--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -1,17 +1,20 @@
-@import "vars"
+@import "../config"
 @import "mixins"
 
-//@import "alerts"
-//@import "breadcrumbs"
-//@import "buttons"
 @import "grid"
-//@import "images"
-//@import "navigation"
-//@import "pagination"
-//@import "panels"
-//@import "print"
-//@import "tables"
-//@import "tabs"
-//@import "tooltips"
-//@import "typography"
+@import "semantic"
+
+@import "colors"
+@import "alerts"
+@import "breadcrumbs"
+@import "buttons"
+@import "images"
+@import "navigation"
+@import "pagination"
+@import "panels"
+@import "print"
+@import "tables"
+@import "tabs"
+@import "tooltips"
+@import "typography"
 
