--- a/sass/centurion.sass
+++ b/sass/centurion.sass
@@ -10,61 +10,60 @@
 
 @import "core/base"
 
-/*   GRID  */
-@include grid-generate
-
-/* Centering Grid */
-@include grid-center
+/* GRID */
+@include grid
+@include media-query(phones)
+  @include grid-mobile
+@include grid-media-query
 
 /* Clearfix */
 @include clearfix
 
 /*  Features */
-
 /* Show Elements */
-//@include show-desktop
-//@include show-mobile
+@include show-desktop
+@include show-mobile
 
 /* Alerts */
-//@include alerts
+@include alerts
 
 /* Breadrumbs */
-//@include breadcrumbs
+@include breadcrumbs
 
 /* Buttons */
-//@include buttons
+@include buttons
 
 /* Images */
-//@include images
+@include images
 
 /* Navigation */
-//@include navigation-slim
-
-/* Panels */
-//@include panels
+@include navigation-slim
 
 /* Pagination */
-//@include pagination
+@include pagination
+
+/* Panels */
+@include panels
 
 /* Tabs */
-//@include tabs-base
-//@include tabs-bottom
+@include tabs-base
+@include tabs-bottom
 
 /* Tables */
-//@include tables
+@include tables
 
 /* Tooltips */
-//@include tooltips
+@include tooltips
 
 /*  Typography  */
-//@include typography
+@include typography
 
-//@include extendables
+@include extendables
 
 /* Print */
-//@include print
+@include print
 
-//@include mobile-view
+@include mobile-view
   
-  
+@import custom
 @import elusive-webfont
