updated IE7 stylesheets to use new grid method

--- a/sass/centurion-ie-rtl.sass
+++ b/sass/centurion-ie-rtl.sass
@@ -10,11 +10,9 @@
 
 @import "core/base"
 $ie7-support: true
-$lang-front: right
-$lang-back: left
 
 /*   GRID  */
-@include grid-generate
+@include grid(right)
 
 /* Centering Grid */
 @include grid-center
