config file to handle more defaults

--- a/sass/_config.sass
+++ b/sass/_config.sass
@@ -17,3 +17,31 @@ $text-font: 'Open Sans', sans-serif
 $heading-font: 'Open Sans Condensed', sans-serif
 $line-height: 1.5
 
+// Links
+$default-link-color: #ffa84c
+$default-link-hover-color: #000000
+
+
+
+// Grid Modifications
+// LTR or RTL Support
+$ie7-support: false
+$lang-front: left
+$lang-back: right
+
+// Desktop
+$max-grid-size: 1120px
+$grid-size: 960px
+$max-space: 2%
+$max-rows: 20
+
+// Mobile
+$max-resp-width: 100%
+$max-resp-space: $max-space
+
+// Classes for Grid
+$grid-class: grid
+$pull-class: pull
+$push-class: push
+
+$mobile-class: mobile
