--- a/css/semantic.css
+++ b/css/semantic.css
@@ -7,14 +7,17 @@
  *  Licensed under GPL and MIT.
  *
  * -------------------------------------------------------- */
+body {
+  font-size: 15px;
+}
+
 h1 {
   margin-top: 0;
 }
 
 header {
+  margin: 0 auto;
   width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
 }
 header section {
   -webkit-box-sizing: border-box;
@@ -23,15 +26,14 @@ header section {
   -o-box-sizing: border-box;
   box-sizing: border-box;
   float: left;
-  padding: 0 15px;
+  padding: 0 1em;
   position: relative;
   width: 100%;
 }
 
 section {
+  margin: 0 auto;
   width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
 }
 section article {
   -webkit-box-sizing: border-box;
@@ -40,7 +42,7 @@ section article {
   -o-box-sizing: border-box;
   box-sizing: border-box;
   float: left;
-  padding: 0 15px;
+  padding: 0 1em;
   position: relative;
   width: 60%;
 }
@@ -51,15 +53,14 @@ section aside {
   -o-box-sizing: border-box;
   box-sizing: border-box;
   float: left;
-  padding: 0 15px;
+  padding: 0 1em;
   position: relative;
   width: 40%;
 }
 
 footer {
+  margin: 0 auto;
   width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
 }
 footer article {
   -webkit-box-sizing: border-box;
@@ -68,11 +69,72 @@ footer article {
   -o-box-sizing: border-box;
   box-sizing: border-box;
   float: left;
-  padding: 0 15px;
+  padding: 0 1em;
   position: relative;
   width: 40%;
   font-size: 1.2em;
 }
 footer article.second {
   left: 40%;
+}
+
+.rtl header {
+  margin: 0 auto;
+  width: 1280px;
+}
+.rtl header section {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  float: right;
+  padding: 0 1em;
+  position: relative;
+  width: 100%;
+}
+.rtl section {
+  margin: 0 auto;
+  width: 1280px;
+}
+.rtl section article {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  float: right;
+  padding: 0 1em;
+  position: relative;
+  width: 60%;
+}
+.rtl section aside {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  float: right;
+  padding: 0 1em;
+  position: relative;
+  width: 40%;
+}
+.rtl footer {
+  margin: 0 auto;
+  width: 1280px;
+}
+.rtl footer article {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  float: right;
+  padding: 0 1em;
+  position: relative;
+  width: 40%;
+  font-size: 1.2em;
+}
+.rtl footer article.second {
+  right: 40%;
 }
