Reorganized base sass file. Semantic renamed, config location changed, and added elusive webfont as a partial

--- a/assets/sass/core/_base.sass
+++ b/assets/sass/core/_base.sass
@@ -1,13 +1,19 @@
-@import "../config"
+// Configuration Options
+@import "config"
+
+// Mixins
 @import "mixins"
 
+// Grid
 @import "grid"
-@import "semantic"
+@import "grid-semantic"
 
+// Features
 @import "colors"
 @import "alerts"
 @import "breadcrumbs"
 @import "buttons"
+@import "elusive-webfont"
 @import "images"
 @import "navigation"
 @import "pagination"
